# pre-legal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json
.history/: CLAUDE_20260722021225.md
backend/: pyproject.toml
backend/app/: auth.py  chat.py  database.py  main.py  schemas.py
backend/tests/: test_auth.py  test_chat.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ChatPanel.tsx  NdaForm.tsx  NdaPdfDocument.tsx  NdaPreview.tsx  PartyFields.tsx
frontend/src/lib/: nda.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: LICENSE.txt
